New Meal Plan Page

--- a/MealPlan/MealPlan/MealPlan.csproj
+++ b/MealPlan/MealPlan/MealPlan.csproj
@@ -26,6 +26,9 @@
     <EmbeddedResource Update="Views\NewMealPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\NewMealPlanPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\RecipeImagePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
